objects/lightsideapps__User_Management_Record__c.object
<CustomObject>
    <fields>
        <fullName>lightsideapps__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only active records will run at the given schedule</description>
        <inlineHelpText>Only active records will run at the given schedule</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__User_Deactivation_DateTime__c</fullName>
        <description>Optional. If set will update any data from the linked UDM Templates then deactivate the</description>
        <label>User Deactivation Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lightsideapps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Management_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Management Record</label>
    <listViews>
        <fullName>lightsideapps__All</fullName>
        <columns>NAME</columns>
        <columns>lightsideapps__Active__c</columns>
        <columns>lightsideapps__User__c</columns>
        <columns>lightsideapps__User_Deactivation_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UMR-{000000}</displayFormat>
        <label>User Management Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Management Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>